--- a/classroom/first/styles.css
+++ b/classroom/first/styles.css
@@ -1,13 +1,75 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 .tags {
-    color: rgb(230, 236, 241);
-    display: block;
-    font-size: 14px;
-    word-break: normal;
-    font-family: "Source Code Pro", Consolas, Menlo, Monaco, Courier, monospace;
-    line-height: 1.4;
-    margin: 32px 0px;
-    padding: 24px 24px 24px 8px;
-    overflow: auto;
-    background: rgb(24, 48, 85);
-    border-radius: 3px;
+  color: rgb(230, 236, 241);
+  display: block;
+  font-size: 14px;
+  word-break: normal;
+  font-family: "Source Code Pro", Consolas, Menlo, Monaco, Courier, monospace;
+  line-height: 1.4;
+  margin: 32px 0px;
+  padding: 24px 24px 24px 8px;
+  overflow: auto;
+  background: rgb(24, 48, 85);
+  border-radius: 3px;
+}
+
+body {
+	margin: 0px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+}
+
+main {
+	padding: 0px 20px;
+	max-width: 1200px;
+	margin: auto;
+	display: flex;
+}
+
+aside {
+	padding: 0px 20px;
+	min-width: 300px;
+	margin: 0px 20px;
+	background-color: #a0c1c19c;
+}
+
+header {
+	padding: 20px;
+	border-bottom: 1px solid #183055;
+}
+
+header > nav {
+	max-width: 1200px;
+	margin: auto;
+}
+
+header > nav > ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+header > nav > ul > a {
+	color: #183055;
+}
+
+footer {
+	background-color: #bfbfbf;
+}
+
+.footer-container {
+	max-width: 1200px;
+	margin: auto;
+	padding: 20px;
+	text-align: center;
+}
+
+h1 {
+  border-bottom: 1px solid #c7c7c7;
+	font-weight: 300;
+}
+
+h2 {
+	font-weight: 400;
+  color: #183055;
 }
