--- a/week1-2/styles/app.css
+++ b/week1-2/styles/app.css
@@ -20,3 +20,12 @@ ul li{
   a:active{
     background-color: blue;
   }
+
+  /*.menu {
+    background-color: greenyellow;
+    position: fixed;
+    top: 0%;
+    right: 0%;
+    left: 0%;
+  } */
+  
