--- a/week1-2/styles/app.css
+++ b/week1-2/styles/app.css
@@ -8,6 +8,17 @@
   left: 0%;
 } */
 
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  font-family:'Open Sans';
+  padding-top: 137px;
+}
+
 iframe{
   width: 100%;
   max-width: 500px;
@@ -18,9 +29,40 @@ iframe{
 }
   
 header{
+  top: 0;
+  left: 0;
   width: 100%;
-  background: yellow;
+  height: 116px;
+  background:white;
+
+    position:fixed;  
 }
+
+
+.logo{
+  width:192px;
+  height:70px;
+  float: left;
+}
+.logo img{
+    opacity:1;
+    width:192px;
+    height:70px;
+    display:block;
+    margin: auto;
+    margin-left: 33px;
+   
+    }
+
+  .container{
+    width: 100%;
+    /* max-width: 1200px; */
+    margin:;
+  }
+
+  header.container{
+    display: table;
+  }
 
 #btn-menu {
   display: none;
@@ -29,39 +71,130 @@ header{
 header label {
   display: none;
   width:30px;
-  height:30px;
-  padding:10px;
+  height:30px
+  padding:  10px;
   border-right: 1px solid #ffffff;
+  float: right;
+  font-size: 28px;
+  margin: 20px;
+  cursor: pointer;
 }
 
 header label:hover{
   cursor: pointer;
-  background: rgba(0,0,0,0.3);
+  background:#FAC419;
+  margin: 20px;
 }
 
 .menu ul {
-  margin: 0;
+  margin: 20px;
   list-style: none;
   padding: 0;
   display: flex;
+  justify-content: flex-end;
 }
 
 .menu li a {
   display: block;
-  padding: 15px 20px;
+  padding: 10px 20px;
   color: #000000;
   text-decoration: none;
+  text-transform: uppercase;
+  font-size: 15px;
+  margin-top: 10px;
 }
 
 .menu li:hover{
-  background: rgba(0,0,0.3);
+  background: #FAC419;
+  width: 102px;
+  height: 42px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .menu li {
   border-right: 1px solid #ffffff;
 }
 
+.hero {
+  width: 100%;
+  height: 486px;
+  background-image: url(../assets/hero.png);
+  background-position: center;
+  background-size: cover;
+}
+
+.containerhero {
+  text-align: end;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: flex-end;
+  padding-right: 60px ;
+  
+}
+
+.hero-content{
+   color: #000000;
+   
+   padding-top: 100px;
+  
+}
+
+.hero-content h1{
+  color: #ffffff;
+  font-size: 50px;
+  text-transform: uppercase;
+}
+
+.hero-content p{
+  color: #000000;
+  padding-top: 30px;
+  font-weight: bold;
+  margin-right: 110px;
+  margin-bottom: 70px;
+}
+
+.hero-content a{
+  margin-right: 180px;
+  text-decoration: none;
+}
+
+.hero-content .btn-view{ 
+  background: linear-gradient(90deg, #F00000 0%, #DC281E 100%);
+  border-radius: 100px;
+  padding: 20px 50px;
+  color: white;
+  font-size: 16px;
+}
+
+.history{
+  display: flex;
+  margin: 40px 20px;
+}
+
+.history h2{
+  text-align: center;
+  font-size: 28px;
+}
+
+.Footer {
+  background: #2C1C19;
+    width: 100%;
+    height: 60px;
+}
+
+.Footer p{
+  text-align: center;
+  color: #ffffff;
+  padding-top: 15px;
+  font-size: 12px;
+}
+
 @media (max-width:768px) {
+  
+
   header label {
     display: block;
   }
@@ -83,4 +216,23 @@ header label:hover{
   #btn-menu:checked ~ .menu {
     margin: 0;
   }
+
+  .hero-content{
+    text-align: center;
+    justify-content: center;
+    
+  }
+
+  .hero-content p{
+    margin-right: -20px;
+  }
+
+  .hero-content .btn-view{
+    padding:10px 30px ;
+    text-align: center;
+    margin-right: -30px
+  }
+
 }
+
+
