--- a/week1-2/styles/app.css
+++ b/week1-2/styles/app.css
@@ -19,10 +19,10 @@ body{
   padding-top: 116px;
 }
 
-iframe{
+/* iframe{ 
   width: 100%;
   max-width: 500px;
-}
+}*/
 
 #imgcheckbox {
   height: 30px;
@@ -169,6 +169,7 @@ header label:hover{
   padding: 20px 50px;
   color: white;
   font-size: 16px;
+  cursor: pointer;
 }
 
 .history{
@@ -179,6 +180,29 @@ header label:hover{
 .history h2{
   text-align: center;
   font-size: 28px;
+}
+
+.video{
+  width: 100%;
+  background-color: #FAC419;
+}
+
+.video > .container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.videos{
+  width: 100%;
+  max-width: 570px;
+  
+}
+
+.videos iframe{
+  width: 100%;
+ 
 }
 
 .Footer {
