--- a/week1-2/styles/app.css
+++ b/week1-2/styles/app.css
@@ -208,8 +208,15 @@ header label:hover{
 
 .youtube {
   text-align: center;
-  padding: 15px 0;
+  padding: 30px 0;
   max-width: 570px;
+  margin: auto;
+}
+
+.youtube h2{
+  color: #ffffff;
+  font-size: 25px;
+  padding-bottom: 40px;
 }
 
 .Footer {
