--- a/week1-2/styles/app.css
+++ b/week1-2/styles/app.css
@@ -97,13 +97,13 @@ header label:hover{
 }
 
 .menu li a {
-  display: block;
+  display: flex;
   padding: 10px 20px;
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 15px;
-  margin-top: 10px;
+  margin-top: 10px; 
 }
 
 .menu li:hover {
@@ -181,11 +181,12 @@ header label:hover{
   margin: 20px 0px;
   }
 
-  .history > .container {
+  .historycontent {
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
   }
 
 .history h2 {
@@ -194,10 +195,57 @@ header label:hover{
 }
 
 .history1{
-   display: flex;
-    flex-direction: row;
+    display: flex; 
+    flex-direction: row; 
     flex-wrap: wrap; 
-    /* justify-content: center; */
+    justify-content: center;
+    place-items: center;
+    width: 100%;
+  }
+
+.historyp1{
+  max-width: 90%;
+}
+
+.year1{
+  max-width: 11%;
+  padding: 0 20px;
+}
+
+.history2{
+  display: flex; 
+  flex-direction: row-reverse;
+  flex-wrap: wrap; 
+  justify-content: center;
+  place-items: center;
+  width: 100%;
+}
+
+.historyp2{
+max-width: 90%;
+}
+
+.year2{
+max-width: 11%;
+padding: 0 20px;
+}
+
+.history3{
+  display: flex; 
+  flex-direction: row; 
+  flex-wrap: wrap; 
+  justify-content: center;
+  place-items: center;
+  width: 100%;
+}
+
+.historyp3{
+max-width: 90%;
+}
+
+.year3{
+max-width: 11%;
+padding: 0 20px;
 }
 
 .video {
