--- a/week1-2/styles/app.css
+++ b/week1-2/styles/app.css
@@ -208,13 +208,12 @@ header label:hover{
 }
 
 .year1{
-  max-width: 11%;
-  padding: 0 20px;
+  padding: 0px 20px;
 }
 
 .history2{
   display: flex; 
-  flex-direction: row-reverse;
+  flex-direction: row; 
   flex-wrap: wrap; 
   justify-content: center;
   place-items: center;
@@ -223,11 +222,12 @@ header label:hover{
 
 .historyp2{
 max-width: 90%;
+order: 1;
 }
 
 .year2{
-max-width: 11%;
-padding: 0 20px;
+  padding: 0px 20px;
+  order: 2;
 }
 
 .history3{
@@ -244,14 +244,14 @@ max-width: 90%;
 }
 
 .year3{
-max-width: 11%;
-padding: 0 20px;
+  padding: 0px 20px;
 }
 
+
 .video {
-  width: 100%;
-  background-color: #FAC419;
-  
+width: 100%;
+background-color: #FAC419;
+
 }
 
 .video > .container {
