--- a/week1-2/styles/app.css
+++ b/week1-2/styles/app.css
@@ -201,8 +201,10 @@ header label:hover{
   justify-content: center;
   place-items: center;
   width: 100%;
-  margin-bottom: 30px;
-  
+  padding-bottom: 30px;
+  border-left: 3px solid blue;
+  margin-left: 1px;
+
 }
 
 .historyp1{
@@ -219,6 +221,9 @@ max-width: 90%;
 
 .historyp1> h4{
   color: blue;
+  font-weight: bolder;
+  padding-bottom: 10px;
+  font-size: 18px;
 }
 
 .history2{
@@ -228,7 +233,10 @@ max-width: 90%;
   justify-content: center;
   place-items: center;
   width: 100%;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-right: 3px solid red;
+  margin-right: 1px;
+
 }
 
 .historyp2{
@@ -246,6 +254,9 @@ order: 1;
 
 .historyp2> h4{
   color: red;
+  font-weight: bolder;
+    padding-bottom: 10px;
+    font-size: 18px;
 }
 
 .history3{
@@ -255,7 +266,9 @@ order: 1;
   justify-content: center;
   place-items: center;
   width: 100%;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
+  margin-left: 1px;
+  border-left: 3px solid #FAC419;
 }
 
 .historyp3{
@@ -270,6 +283,9 @@ max-width: 90%;
 
 .historyp3> h4{
   color: #FAC419;
+  font-weight: bolder;
+    padding-bottom: 10px;
+    font-size: 18px;
 }
 
 
