--- a/week1-2/styles/app.css
+++ b/week1-2/styles/app.css
@@ -187,11 +187,18 @@ header label:hover{
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
+    line-height: 150%;
   }
 
 .history h2 {
   text-align: center;
   font-size: 28px;
+}
+
+.historycontent h3{
+  padding-left: 8px;
+  font-size: xx-large;
+  font-weight: bolder;
 }
 
 .history1{
@@ -202,6 +209,7 @@ header label:hover{
   place-items: center;
   width: 100%;
   padding-bottom: 30px;
+  margin-bottom: 30px;
   border-left: 3px solid blue;
   margin-left: 1px;
 
@@ -222,7 +230,7 @@ max-width: 90%;
 .historyp1> h4{
   color: blue;
   font-weight: bolder;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   font-size: 18px;
 }
 
@@ -236,6 +244,7 @@ max-width: 90%;
   padding-bottom: 30px;
   border-right: 3px solid red;
   margin-right: 1px;
+  margin-bottom: 30px;
 
 }
 
@@ -255,7 +264,7 @@ order: 1;
 .historyp2> h4{
   color: red;
   font-weight: bolder;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     font-size: 18px;
 }
 
@@ -284,7 +293,7 @@ max-width: 90%;
 .historyp3> h4{
   color: #FAC419;
   font-weight: bolder;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     font-size: 18px;
 }
 
