--- a/week3-4/src/components/History/History.css
+++ b/week3-4/src/components/History/History.css
@@ -129,6 +129,10 @@ max-width: 80%;
     font-size: 18px;
 }
 
+svg{
+  align-self: center;
+}
+
 @media all and (max-width:768px) {
 
     .historyp1,.historyp2,.historyp3{
