--- a/week3-4/src/components/Hero/Hero.css
+++ b/week3-4/src/components/Hero/Hero.css
@@ -59,22 +59,62 @@
   @media all and (max-width:768px) {
 
     .hero{
-        background-position: right;
-      }
-    
-      .hero-content{
+        background-position: center;
         text-align: center;
         justify-content: center;
+        height: 300px;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+        font-size: 15px;
         
       }
     
-      .hero-content p{
-        margin-right: -20px;
+      .hero-content{
+        padding: 0;
+        margin-top: 20px;
+        padding-top: 20px;
+        margin-right: 40px;
+
       }
+
+      .containerhero{
+        padding: 0;
+      }
+
+      .hero-content h1{
+        padding: 0;
+        margin: 0;
+        font-size: 40px;
+
+      }
+
+      .hero-content p{
+        padding:0;
+        margin: 20px 0px 50px 0px;
+      }
+    
+      
     
       .hero-content .btn-view{
         padding:10px 30px ;
         text-align: center;
-        margin-right: -30px
+        margin-right: auto;
       }
+  }
+
+  @media all and (max-width:538px) {
+
+  .hero{
+    background-image: url(pokemonback.jpg);
+    background-position: left;
+  }
+
+  .containerhero{
+    text-align: center;
+  }
+
+  .hero-content{
+    margin-right: 0px;
+  }
   }
