--- a/week3-4/src/components/PokemonList/PokemonList.css
+++ b/week3-4/src/components/PokemonList/PokemonList.css
@@ -4,6 +4,7 @@
 	flex-wrap: wrap;
 	align-items: space-between;
 	justify-content: center;
-	margin: 116px auto;
+	margin:  auto;
 	max-width: 1200px;
+	margin-top: 20px;
 }
