--- a/week3-4/src/components/Video/Video.css
+++ b/week3-4/src/components/Video/Video.css
@@ -1,6 +1,6 @@
 .video {
     width: 100%;
-    background-color: white; 
+    background-color:  #FAC419; 
     margin-top: 40px;
     overflow: hidden;
     
